inc/quiche.pp


    { Sets the `initial_max_streams_bidi` transport parameter. }
    procedure quiche_config_set_initial_max_streams_bidi(config:Pquiche_config; v:uint64_t);

    { Sets the `initial_max_streams_uni` transport parameter. }
    procedure quiche_config_set_initial_max_streams_uni(config:Pquiche_config; v:uint64_t);

    { Sets the `ack_delay_exponent` transport parameter. }
    procedure quiche_config_set_ack_delay_exponent(config:Pquiche_config; v:uint64_t);

    { Sets the `max_ack_delay` transport parameter. }
    procedure quiche_config_set_max_ack_delay(config:Pquiche_config; v:uint64_t);

    { Sets the `disable_active_migration` transport parameter. }
    procedure quiche_config_set_disable_active_migration(config:Pquiche_config; v:bool);

    { Sets the congestion control algorithm used by string. }
(* Const before type ignored *)
    function quiche_config_set_cc_algorithm_name(config:Pquiche_config; algo:Pchar):longint;

    { Sets the initial cwnd for the connection in terms of packet count. }
    procedure quiche_config_set_initial_congestion_window_packets(config:Pquiche_config; packets:size_t);


    type
      quiche_cc_algorithm = (QUICHE_CC_RENO := 0,QUICHE_CC_CUBIC := 1,
        QUICHE_CC_BBR := 2,QUICHE_CC_BBR2 := 3
        );

    { Sets the congestion control algorithm used. }

    procedure quiche_config_set_cc_algorithm(config:Pquiche_config; algo:quiche_cc_algorithm);

    { Configures whether to use HyStart++. }
    procedure quiche_config_enable_hystart(config:Pquiche_config; v:bool);

    { Configures whether to enable pacing (enabled by default). }
    procedure quiche_config_enable_pacing(config:Pquiche_config; v:bool);

    { Configures max pacing rate to be used. }
    procedure quiche_config_set_max_pacing_rate(config:Pquiche_config; v:uint64_t);

    { Configures whether to enable receiving DATAGRAM frames. }
    procedure quiche_config_enable_dgram(config:Pquiche_config; enabled:bool; recv_queue_len:size_t; send_queue_len:size_t);

    { Sets the maximum connection window. }
    procedure quiche_config_set_max_connection_window(config:Pquiche_config; v:uint64_t);

    { Sets the maximum stream window. }
    procedure quiche_config_set_max_stream_window(config:Pquiche_config; v:uint64_t);

    { Sets the limit of active connection IDs. }
    procedure quiche_config_set_active_connection_id_limit(config:Pquiche_config; v:uint64_t);

    { Sets the initial stateless reset token. |v| must contain 16 bytes, otherwise the behaviour is undefined. }
(* Const before type ignored *)
    procedure quiche_config_set_stateless_reset_token(config:Pquiche_config; v:Puint8_t);

    { Frees the config object. }
    procedure quiche_config_free(config:Pquiche_config);

    { Extracts version, type, source / destination connection ID and address }
    { verification token from the packet in |buf|. }
(* Const before type ignored *)
    function quiche_header_info(buf:Puint8_t; buf_len:size_t; dcil:size_t; version:Puint32_t; _type:Puint8_t; 
               scid:Puint8_t; scid_len:Psize_t; dcid:Puint8_t; dcid_len:Psize_t; token:Puint8_t; 
               token_len:Psize_t):longint;

    { A QUIC connection. }

    //type
    { Creates a new server-side connection. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)

    function quiche_accept(scid:Puint8_t; scid_len:size_t; odcid:Puint8_t; odcid_len:size_t; local:Psockaddr; 
               local_len:size_t; peer:Psockaddr; peer_len:size_t; config:Pquiche_config):Pquiche_conn; stdcall;

    { Creates a new client-side connection. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_connect(server_name:Pchar; scid:Puint8_t; scid_len:size_t; local:Psockaddr; local_len:size_t; 
               peer:Psockaddr; peer_len:size_t; config:Pquiche_config):Pquiche_conn; stdcall;

    { Writes a version negotiation packet. }
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_negotiate_version(scid:Puint8_t; scid_len:size_t; dcid:Puint8_t; dcid_len:size_t; out_buffer:Puint8_t; 
               out_len:size_t):ssize_t; stdcall;

    { Writes a retry packet. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_retry(scid:Puint8_t; scid_len:size_t; dcid:Puint8_t; dcid_len:size_t; new_scid:Puint8_t; 
               new_scid_len:size_t; token:Puint8_t; token_len:size_t; version:uint32_t; out_buffer:Puint8_t; 
               out_len:size_t):ssize_t;

    { Returns true if the given protocol version is supported. }
    function quiche_version_is_supported(version:uint32_t):bool;

(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_conn_new_with_tls(scid:Puint8_t; scid_len:size_t; odcid:Puint8_t; odcid_len:size_t; local:Psockaddr; 
               local_len:size_t; peer:Psockaddr; peer_len:size_t; config:Pquiche_config; ssl:pointer; 
               is_server:bool):Pquiche_conn;

    { Enables keylog to the specified file path. Returns true on success. }
(* Const before type ignored *)
    function quiche_conn_set_keylog_path(conn:Pquiche_conn; path:Pchar):bool;

    { Enables keylog to the specified file descriptor. Unix only. }
    procedure quiche_conn_set_keylog_fd(conn:Pquiche_conn; fd:longint);

    { Enables qlog to the specified file path. Returns true on success. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_conn_set_qlog_path(conn:Pquiche_conn; path:Pchar; log_title:Pchar; log_desc:Pchar):bool;

    { Enables qlog to the specified file descriptor. Unix only. }
(* Const before type ignored *)
(* Const before type ignored *)
    procedure quiche_conn_set_qlog_fd(conn:Pquiche_conn; fd:longint; log_title:Pchar; log_desc:Pchar);

    { Configures the given session for resumption. }
(* Const before type ignored *)
    function quiche_conn_set_session(conn:Pquiche_conn; buf:Puint8_t; buf_len:size_t):longint;

    { The remote address the packet was received from. }
    { The local address the packet was received on. }


    { Processes QUIC packets received from the peer. }
(* Const before type ignored *)

    function quiche_conn_recv(conn:Pquiche_conn; buf:Puint8_t; buf_len:size_t; info:Pquiche_recv_info):ssize_t;

    { The local address the packet should be sent from. }
    { The remote address the packet should be sent to. }
    { The time to send the packet out. }

    { Writes a single QUIC packet to be sent to the peer. }

    function quiche_conn_send(conn:Pquiche_conn; out_buffer:Puint8_t; out_len:size_t; out_info:Pquiche_send_info):ssize_t;

    { Returns the size of the send quantum, in bytes. }
(* Const before type ignored *)
    function quiche_conn_send_quantum(conn:Pquiche_conn):size_t;

    { Reads contiguous data from a stream. }
    function quiche_conn_stream_recv(conn:Pquiche_conn; stream_id:uint64_t; out_buffer:Puint8_t; buf_len:size_t; fin:Pbool):ssize_t;

    { Writes data to a stream. }
(* Const before type ignored *)
    function quiche_conn_stream_send(conn:Pquiche_conn; stream_id:uint64_t; buf:Puint8_t; buf_len:size_t; fin:bool):ssize_t;

    { The side of the stream to be shut down. }

    type
      quiche_shutdown = (QUICHE_SHUTDOWN_READ := 0,QUICHE_SHUTDOWN_WRITE := 1
        );

    { Sets the priority for a stream. }

    function quiche_conn_stream_priority(conn:Pquiche_conn; stream_id:uint64_t; urgency:uint8_t; incremental:bool):longint;

    { Shuts down reading or writing from/to the specified stream. }
    function quiche_conn_stream_shutdown(conn:Pquiche_conn; stream_id:uint64_t; direction:quiche_shutdown; err:uint64_t):longint;

    { Returns the stream's send capacity in bytes. }
(* Const before type ignored *)
    function quiche_conn_stream_capacity(conn:Pquiche_conn; stream_id:uint64_t):ssize_t;

    { Returns true if the stream has data that can be read. }
(* Const before type ignored *)
    function quiche_conn_stream_readable(conn:Pquiche_conn; stream_id:uint64_t):bool;

    { Returns the next stream that has data to read, or -1 if no such stream is }
    { available. }
    function quiche_conn_stream_readable_next(conn:Pquiche_conn):int64_t;

    { Returns true if the stream has enough send capacity. }
    { }
    { On error a value lower than 0 is returned. }
    function quiche_conn_stream_writable(conn:Pquiche_conn; stream_id:uint64_t; len:size_t):longint;

    { Returns the next stream that can be written to, or -1 if no such stream is }
    { available. }
    function quiche_conn_stream_writable_next(conn:Pquiche_conn):int64_t;

    { Returns true if all the data has been read from the specified stream. }
(* Const before type ignored *)
    function quiche_conn_stream_finished(conn:Pquiche_conn; stream_id:uint64_t):bool;


    //type
    { Returns an iterator over streams that have outstanding data to read. }
(* Const before type ignored *)

    function quiche_conn_readable(conn:Pquiche_conn): Pquiche_stream_iter;

    { Returns an iterator over streams that can be written to. }
(* Const before type ignored *)
    function quiche_conn_writable(conn:Pquiche_conn): Pquiche_stream_iter;

    { Returns the maximum possible size of egress UDP payloads. }
(* Const before type ignored *)
    function quiche_conn_max_send_udp_payload_size(conn:Pquiche_conn):size_t;

    { Returns the amount of time until the next timeout event, in nanoseconds. }
(* Const before type ignored *)
    function quiche_conn_timeout_as_nanos(conn:Pquiche_conn):uint64_t;

    { Returns the amount of time until the next timeout event, in milliseconds. }
(* Const before type ignored *)
    function quiche_conn_timeout_as_millis(conn:Pquiche_conn):uint64_t;

    { Processes a timeout event. }
    procedure quiche_conn_on_timeout(conn:Pquiche_conn);

    { Closes the connection with the given error and reason. }
(* Const before type ignored *)
    function quiche_conn_close(conn:Pquiche_conn; app:bool; err:uint64_t; reason:Puint8_t; reason_len:size_t):longint;

    { Returns a string uniquely representing the connection. }
(* Const before type ignored *)
(* Const before type ignored *)
    procedure quiche_conn_trace_id(conn:Pquiche_conn; out_buffer:PPuint8_t; out_len:Psize_t);

    { Returns the source connection ID. }
(* Const before type ignored *)
(* Const before type ignored *)
    procedure quiche_conn_source_id(conn:Pquiche_conn; out_buffer:PPuint8_t; out_len:Psize_t);

    { Returns the destination connection ID. }
(* Const before type ignored *)
(* Const before type ignored *)
    procedure quiche_conn_destination_id(conn:Pquiche_conn; out_buffer:PPuint8_t; out_len:Psize_t);

    { Returns the negotiated ALPN protocol. }
(* Const before type ignored *)
(* Const before type ignored *)
    procedure quiche_conn_application_proto(conn:Pquiche_conn; out_buffer:PPuint8_t; out_len:Psize_t);

    { Returns the peer's leaf certificate (if any) as a DER-encoded buffer. }
(* Const before type ignored *)
(* Const before type ignored *)
    procedure quiche_conn_peer_cert(conn:Pquiche_conn; out_buffer:PPuint8_t; out_len:Psize_t);

    { Returns the serialized cryptographic session for the connection. }
(* Const before type ignored *)
(* Const before type ignored *)
    procedure quiche_conn_session(conn:Pquiche_conn; out_buffer:PPuint8_t; out_len:Psize_t);
